--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Don't feed the fish</title>
     <link rel="stylesheet" href="./style.css">
-    <script src="//cdn.jsdelivr.net/npm/phaser@3.17.0/dist/phaser.js"></script>
-    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/phaser/3.11.0/phaser-arcade-physics.min.js"></script> -->
+    <!-- <script src="//cdn.jsdelivr.net/npm/phaser@3.17.0/dist/phaser.js"></script> -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/phaser/3.11.0/phaser-arcade-physics.min.js"></script>
     <link rel="icon" href="#">
 </head>
 
